src/objects/ITOP_Ticket__c.object
<CustomObject>
    <description>Ticket request for IT On Point locations.</description>
    <fields>
        <fullName>Date_Closed__c</fullName>
        <description>Date ticket status was changed to &quot;Closed&quot; by IT On Point employee.</description>
        <label>Date Closed</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date_Opened__c</fullName>
        <description>Date ticket status was changed to &quot;Opened&quot; by ITOP employee.</description>
        <label>Date Opened</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date_Requested__c</fullName>
        <defaultValue>NOW()</defaultValue>
        <description>Date ticket request was initialized</description>
        <label>Date Requested</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Estimated_Time__c</fullName>
        <formula>Request__r.Estimated_Time__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Estimated Time</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Estimated_Wait_Time__c</fullName>
        <label>Estimated_Wait_Time</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Location</label>
        <referenceTo>ITOP_Location__c</referenceTo>
        <relationshipLabel>ITOP Tickets</relationshipLabel>
        <relationshipName>ITOP_Tickets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <description>Notes for IT On Point employee use only</description>
        <label>Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Priority_Level__c</fullName>
        <defaultValue>1</defaultValue>
        <description>Level of Priority, editable only by IT On Point employees</description>
        <label>Priority Level</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Request__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ITOP_Request reference/relationship unique for each ticket</description>
        <label>Request</label>
        <referenceTo>ITOP_Request__c</referenceTo>
        <relationshipLabel>ITOP Tickets</relationshipLabel>
        <relationshipName>ITOP_Tickets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Ticket status.  Requested upon creation.  Changed only by ITOP employees unless cancelled.</description>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Requested</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Opened</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Summary__c</fullName>
        <formula>Request__r.Summary__c</formula>
        <label>Summary</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>isPriority__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isPriority</label>
        <type>Checkbox</type>
    </fields>
    <label>ITOP Ticket</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Ticket ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ITOP Tickets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>